[fix]: z-index

--- a/src/styles/Leaf.module.css
+++ b/src/styles/Leaf.module.css
@@ -39,5 +39,6 @@ body {
   .floatingImage {
     width: 100px;
     height: 100px;
+    z-index: 99999;
   }
 }
